syntax = "proto3";

package go.micro.srv.AdminLogin;

service Example {
	rpc AdminLogin(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message Request {
	string UserName = 1;
	string Password = 2;
}

message Response {
	string Code = 1;
	string Msg = 2;
	message DataStruct {
		string UserId = 1;
	}
	DataStruct Data = 3;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
